public/styles/main.css
/* Abas */

div#abas {
    height: 100vh;
    margin-left: 42px;
    -webkit-transition: all .3s cubic-bezier(.24, 1.04, .63, .94);
    -moz-transition: all .3s cubic-bezier(.24, 1.04, .63, .94);
    -ms-transition: all .3s cubic-bezier(.24, 1.04, .63, .94);
    -o-transition: all .3s cubic-bezier(.24, 1.04, .63, .94);
    transition: all .3s cubic-bezier(.24, 1.04, .63, .94);
}

nav:hover + div#abas, nav.fixo + div#abas { /* Previne div#abas de voltar para a esquerda */
    margin-left: 252px; /* 210px (nav content) + 42px (nav border-right) */
}

div#abas div {
    border: 2px solid blueviolet;
    display: none;
    margin: 0;
    width: 100%;
    height: 100%;
}



/* Barra de rolamento personalizada (Chrome) */

::-webkit-scrollbar {
    width: 15px;
    height: 15px;
}

::-webkit-scrollbar-track {
    background: #a7403d7a;
}

::-webkit-scrollbar-thumb {
    background: #680d0a88;
}

::-webkit-scrollbar-thumb:hover {
    background: #4e0a08f1;
}



/* Ícones */

img.icon {
    filter: invert(1); /* Preto para branco */
}

/* SVGs */
/* path {
    fill: white;
} */

